7.23/雅思架构内容逐步说明.md
# 雅思架构内容逐步说明

> 本文单独解释此前加入《UniSpeaking架构设计.md》的雅思内容。
>
> 重点回答三个问题：写进去的东西是什么、为什么需要它、它在一次完整雅思考试中具体做哪一步。
>
> 本文不会修改《UniSpeaking架构设计.md》。大树仍然负责表达抽象关系，本文负责把抽象翻译成具体职责和实际调用顺序。

## 一、先理解“大树”和“小树”的区别

《UniSpeaking架构设计.md》中的雅思节点属于目标架构抽象，不代表 demo 中已经存在完全同名的 Java 类。

```text
大树
回答：系统分为哪些层，每层依赖谁，哪些模块实现统一接口。

小树
回答：一次请求真正先做什么、后做什么，数据如何变化，异常如何处理。

当前雅思 demo
一部分流程位于 React 前端的 JavaScript 模块，
一部分 Attempt、WebSocket 和评分能力已经位于 Java 后端。

目标架构
用 IeltsAttemptService、IeltsSessionService、IeltsExamFlowService、
IeltsPromptService、IeltsEvaluationService 等 Java Service
把这些分散职责收拢到统一的后端分层中。
```

## 二、此前加入大树的雅思内容总览

| 大树位置           | 新增抽象                           | 它是什么                  | 当前 demo 的主要对应实现                                                        |
| -------------- | ------------------------------ | --------------------- | ---------------------------------------------------------------------- |
| Controller 接口层 | `IeltsAttemptController`       | 雅思 HTTP API 入口        | Java `IeltsAttemptController.java`                                     |
| WebSocket 层    | `IeltsSessionWebSocketHandler` | 雅思实时事件适配器             | 前端 `ielts-session-runtime.mjs` + Java `IeltsScoringStreamHandler.java` |
| 实时会话体系         | `IeltsSessionService`          | 一次雅思 Realtime 会话的应用服务 | 前端 `ielts-session-runtime.mjs`，部分职责在 Java Controller/Attempt 中         |
| 自定义场景流程体系      | `IeltsExamFlowService`         | 雅思确定性考试状态机的应用层封装      | `demo-controller.mjs` + `exam-state-machine.mjs`                       |
| 场景生成体系         | `IeltsQuestionBankService`     | 题库加载和结构校验服务           | `question-bank.mjs`                                                    |
| 场景生成体系         | `IeltsPaperAssemblerService`   | 不可变试卷快照组装服务           | `paper-assembler.mjs`                                                  |
| Prompt 体系      | `IeltsPromptService`           | 考官与评分 Prompt 的统一门面    | Java `IeltsPromptCatalog.java` + 前端 `examiner-prompt-catalog.mjs`      |
| 评分体系           | `IeltsEvaluationService`       | 音频/字幕采集和最终评分的统一门面     | `IeltsTurnAssembler` + `IeltsScoringOrchestrator` 等 Java 类             |

这里最重要的一点是：

```text
大树中的 Service 名称 = 希望形成的稳定业务边界。

demo 中的具体文件 = 当前可运行实现。

二者不是要求文件名一模一样，
而是把 demo 已有能力重新归类后，形成后续 Java 融合时可维护的结构。
```

## 三、Controller 接口层：IeltsAttemptController 是什么

### 3.1 它是什么

`IeltsAttemptController` 是雅思模块的 HTTP 请求入口，属于接口层。

它不负责组卷细节、不直接计算分数，也不应该自己处理 PCM 音频。它只做参数接收、调用应用 Service、把结果转换成 HTTP 响应。

当前 demo 中已经存在同名 Java Controller：

```text
backend/src/main/java/com/example/unispeaking/controller/IeltsAttemptController.java
```

### 3.2 为什么需要它

前端需要通过稳定 API 完成以下操作：

```text
创建考试
查询考试状态
通知考试结束
轮询评分状态
读取最终报告
放弃考试
删除本地考试数据
```

如果没有独立 Controller，这些操作会散落在 WebSocket 或通用场景接口中，导致考试生命周期不清晰。

### 3.3 每个接口具体做什么

#### createAttempt()

```text
类型：HTTP POST 创建接口
输入：mode、PaperSnapshot、客户端状态版本
输出：attemptId、评分状态、Prompt 版本、计时配置、评分 WebSocket 地址
调用：IeltsAttemptService.createAttempt()
```

它的意义是正式创建“一次考试”。创建成功后，后端才允许评分 WebSocket 绑定这个 `attemptId`。

当前 demo 的具体动作是：

```text
校验 mode 是否为 full_mock 或 practice_part
→ 生成 att_ 开头的 attemptId
→ 创建 IeltsAttempt
→ 放入 IeltsAttemptRegistry
→ 返回 scoring_ws_url 和 realtime_session_config
```

#### getAttempt()

```text
类型：HTTP GET 查询接口
输入：attemptId
输出：当前 Part、当前题目、评分状态、Prompt 版本、计时配置和轮次摘要
调用：IeltsAttemptService.getAttempt()
```

它用于页面恢复、调试和状态查看，不负责推进考试。

#### finalizeAttempt()

```text
类型：HTTP POST 结束接口
输入：attemptId
输出：FINALIZING 状态和 reportUrl
调用：IeltsAttemptService.finalizeAttempt()
```

它的意义不是“立刻同步返回分数”，而是通知后端：考试输入已经完成，可以在评分音频流封闭后启动异步评分。

当前 demo 会先检查是否已经有报告或正在评分，避免重复启动同一场评分。

#### getScoringStatus()

```text
类型：HTTP GET 状态查询接口
输入：attemptId
输出：COLLECTING、FINALIZING、SCORING、COMPLETE、PARTIAL、UNSCORABLE 或 ABANDONED
调用：IeltsAttemptService.getScoringStatus()
```

前端用它判断应该继续等待、显示完整报告、显示部分报告，还是提示不可评分。

#### getReport()

```text
类型：HTTP GET 报告查询接口
输入：attemptId
输出：IeltsReport 或仍在评分的状态
调用：IeltsAttemptService.getReport()
```

报告还未生成时应返回“处理中”，不能使用空对象伪装成零分报告。

#### abandonAttempt()

```text
类型：HTTP POST 放弃接口
输入：attemptId
输出：ABANDONED
调用：IeltsAttemptService.abandonAttempt()
```

放弃后需要取消评分 Future、使评分 WebSocket 失效，并禁止旧任务发布报告。

#### deleteAttempt()

```text
类型：HTTP DELETE 删除接口
输入：attemptId
输出：204 No Content
调用：IeltsAttemptService.deleteAttempt()
```

它用于清理本地 Attempt。删除和放弃不同：放弃保留终态语义，删除则把对象从本地 Registry 移除。

## 四、WebSocket 层：IeltsSessionWebSocketHandler 是什么

### 4.1 它是什么

`IeltsSessionWebSocketHandler` 是大树中为统一架构抽象出的雅思实时事件入口。

它与 `LearningWebSocketHandler` 不同。雅思没有 WORD、PHRASE、SENTENCE 等学习流程，因此不需要 Learning Handler，只需要考试会话和评分采集通道。

### 4.2 当前 demo 为什么不是完全同名

当前 demo 把实时职责拆成了两部分：

```text
前端 ielts-session-runtime.mjs
负责 WebRTC、Realtime DataChannel、考官 response.create、ASR 事件转发。

Java IeltsScoringStreamHandler.java
负责评分 WebSocket、PCM 二进制流和评分控制事件。
```

因此，大树中的 `IeltsSessionWebSocketHandler` 是目标架构中的统一适配层名称，不是声称当前已经有一个同名 Java 文件。

### 4.3 雅思考试事件

```text
雅思考试事件
→ IeltsSessionWebSocketHandler
→ IeltsSessionService.handleEvent()
```

典型控制事件包括：

```text
stream.start
part.started
question.asked
turn.opened
turn.speech_started
turn.speech_stopped
turn.transcript_chunk
turn.transcript_completed
turn.completed
part2.preparation_started
part2.speaking_started
part2.speaking_completed
stream.end
```

Handler 只负责解析、去重、校验绑定和转发，不应该在这里写评分算法。

### 4.4 雅思评分音频事件

```text
UTTERANCE_AUDIO_START
→ IeltsEvaluationService.start()

UTTERANCE_AUDIO_CHUNK
→ IeltsEvaluationService.setAudio()

UTTERANCE_AUDIO_END
→ IeltsEvaluationService.finishAudio()
```

在当前 demo 中，PCM 通过二进制 WebSocket 连续到达；题目、字幕和完成原因通过文本事件到达。二者最终由 `IeltsTurnAssembler` 合并为同一个 `IeltsTurn`。

### 4.5 为什么 Part 2 必须特殊处理

普通 VAD 会在短暂停顿时产生 `speech_stopped`。Part 2 是长回答，停顿不等于回答结束。

因此：

```text
speech_stopped
只关闭当前发声片段，不关闭逻辑轮次。

part2.speaking_completed 或 TIME_LIMIT
才真正调用 complete() 结束 Part 2 轮次。
```

## 五、实时会话体系：IeltsSessionService 是什么

### 5.1 它是什么

`IeltsSessionService` 是雅思 Realtime 会话的应用服务，并继承统一的 `SessionService`。

它负责“会话怎么建立和结束”，不负责“下一题是哪一题”。下一题由 `IeltsExamFlowService` 决定。

当前 demo 中，它的职责主要分散在：

```text
frontend/src/ielts/ielts-session-runtime.mjs
frontend/src/ielts/demo-controller.mjs
backend IeltsAttemptController / IeltsAttempt / IeltsAttemptRegistry
```

### 5.2 createSession()

```text
输入：attemptId、当前用户和 Realtime 配置
输出：IeltsSession
作用：建立 Attempt 与本地会话的绑定关系
```

这一步只创建会话上下文，不开始考试状态流转。

### 5.3 prepareSession()

```text
IeltsAttemptService.validateRealtimeSessionStart()
#校验能否开始实时会话
→ IeltsPromptService.buildPrompt()
→ 返回准备好的会话配置
```

它需要确认：

```text
Attempt 存在且仍然 active
PaperSnapshot 不为空且不可变
mode 与 selectedPart 合法
Prompt 版本可以读取
Realtime Provider 配置可用
```

### 5.4 saveTranscript()

```text
IeltsAttemptService.setTranscript()
→ IeltsAttemptService.saveTranscriptAsync()
→ IeltsEvaluationService.setTranscript()
```

saveTranscript()
    ├── [调用] IeltsAttemptService.setTranscript()
    │   # 同步设置转写到考试记录
    ├── [调用] IeltsAttemptService.saveTranscriptAsync()
    │   # 异步持久化到数据库/对象存储
    └── 用户字幕调用
        IeltsEvaluationService.setTranscript()
        # 实时推送给评分引擎
这里保存的是 `rawTranscript`。评分 Prompt 明确禁止使用纠正后的表达，因为纠正内容会让评分虚高。

Introduction 字幕可以保存用于会话回放，但必须标记 `scoringEligible=false`。

### 5.5 completeSession()

```text
IeltsEvaluationService.getFinalReport()
→ IeltsAttemptService.setReport()
→ IeltsAttemptService.saveReportAsync()
→ UsageQuotaService.settle()
```

完整含义是：
completeSession()
    ├── [调用] IeltsEvaluationService.getFinalReport()
    │   # 获取最终评分报告
    ├── [调用] IeltsAttemptService.setReport()
    │   # 关联报告到考试记录
    ├── [调用] IeltsAttemptService.saveReportAsync()
    │   # 异步保存报告
    └── [调用] UsageQuotaService.settle()
        # 结算使用配额（扣费/减次数）

```text
先停止创建新轮次
→ 等待 PCM post-roll
→ 发送 stream.end
→ 等待评分流完成
→ 启动异步评分
→ 保存并发布报告
→ 关闭连接和结算资源
```

## 六、实时会话体系的四个统一钩子为什么这样写

大树要求所有 `SessionService` 子类实现：

```text
createSession()
prepareSession()
saveTranscript()
completeSession()
```

雅思实现这四个钩子的目的，是让自由聊天、自定义场景和雅思都遵循相同的会话骨架：

```text
统一骨架                    雅思具体含义

createSession()             创建 Attempt 绑定的考试会话
prepareSession()            校验 PaperSnapshot 并生成考官 Prompt
saveTranscript()            保存原始字幕并加入评分证据
completeSession()           封闭流、评分、保存报告、结算额度
```

这样公共的鉴权、配额、SDP 交换、超时绑定和关闭逻辑可以继续复用，而雅思只提供自己的业务差异。

## 七、考试流程体系：IeltsExamFlowService 是什么

### 7.1 它是什么

`IeltsExamFlowService` 是确定性考试状态机的应用层封装。

它不是大模型 Agent，也不是让考官自由决定流程。它必须保证相同状态和事件总能得到确定的下一状态。

当前 demo 对应：

```text
exam-state-machine.mjs
负责状态、允许动作和 transitionExam()。

demo-controller.mjs
负责调用状态机、启动计时器、播放固定指令和触发界面变化。
```

### 7.2 generateScene()

虽然沿用了统一接口中的 `generateScene()` 名称，但雅思不使用 LLM 生成场景。

它实际做的是：生成考试场景

```text
generateScene()
    ├── [调用] IeltsQuestionBankService.loadAndValidate()   // 加载校验题库
    ├── [调用] IeltsPaperAssemblerService.assemble()         // 组装试卷快照
    ├── [调用] IeltsAttemptService.setPaperSnapshot()        // 关联到考试记录
    └── [调用] IeltsFlowStateService.set(READY)              // 状态设为"就绪"
```

输出是冻结的 `IeltsPaperSnapshot`。

### 7.3 getCurrentStage()
getCurrentStage()
    ├── [调用] IeltsFlowStateService.get()              // 读当前状态
    └── [调用] IeltsAttemptService.getPaperSnapshot()   // 读试卷内容

```text
输入：attemptId
输出：当前状态、当前 Part、当前题号和试卷快照
调用：IeltsFlowStateService.get() + IeltsAttemptService.getPaperSnapshot()
```

它只读取状态，不产生流转。

### 7.4 advanceStage()
推进考试阶段（核心）
advanceStage()
    ├── [调用] IeltsFlowStateService.get()              // 获取当前状态
    │
    ├── 判断 READY → OPENING → INTRODUCTION → PART1_ANSWERING
    │   // 开场：就绪→开场白→自我介绍→进入Part1答题
    │
    ├── 判断 PART1_ANSWERING → PART2_PREPARING → PART2_ANSWERING
    │   // Part1结束→Part2准备（1分钟）→Part2答题（2分钟独白）
    │
    ├── 判断 PART2_ANSWERING → PART3_ANSWERING → REPORT
    │   // Part2结束→Part3深入讨论→生成报告
    │
    ├── [调用] IeltsFlowStateService.transition()       // 执行状态转换
    └── [调用] IeltsAttemptService.setCurrentStage()    // 记录当前阶段
它根据事件推进以下主路径：

```text
READY
→ OPENING
→ INTRODUCTION
→ PART1_ANSWERING
→ PART2_PREPARING
→ PART2_ANSWERING
→ PART3_ANSWERING
→ REPORT
```

不是每个状态都允许所有事件。例如：

```text
READY 只允许 START
OPENING 只允许 EXAMINER_DONE、退出等有限动作
PART2_PREPARING 允许 PREP_EXPIRED
答题状态允许 SUBMIT_ANSWER
practice_part 答题状态额外允许 RETRY 和 NEXT
终态不再接受流转
```

### 7.5 validateRealtimeSessionStart()

```text
IeltsAttemptService.getAttempt()
→ IeltsAttemptService.validatePaperSnapshot()
→ IeltsPromptService.getExaminerPrompt()
```

validateRealtimeSessionStart()
    ├── [调用] IeltsAttemptService.getAttempt()           // 获取考试记录
    ├── [调用] IeltsAttemptService.validatePaperSnapshot() // 校验试卷是否生成
    └── [调用] IeltsPromptService.getExaminerPrompt()      // 校验提示词是否就绪
它是开始 Realtime 前的业务门禁，避免没有试卷、已放弃或状态错误的 Attempt 建立昂贵连接。

### 7.6 completeScene()

```text
IeltsFlowStateService.set(REPORT)
→ IeltsAttemptService.finalizeAttempt()
```

completeScene()
    ├── [调用] IeltsFlowStateService.set(REPORT)          // 状态设为"报告"
	    └── [调用] IeltsAttemptService.finalizeAttempt()       // 最终化考试记录
这里的 `completeScene` 是为了实现统一 `SceneFlowService` 接口。对雅思而言，它的真实语义是“考试输入完成并进入报告阶段”。

### 7.7 startPart2Preparation()

```text
进入 PART2_PREPARING
→ 启动准备倒计时
→ 允许编辑笔记
→ 倒计时结束锁定笔记
→ 进入 PART2_ANSWERING
```
startPart2Preparation()
    ├── [调用] IeltsFlowStateService.set(PART2_PREPARING)      // 状态=准备中
    └── [调用] IeltsExamTimerService.startPreparationTimer()   // 启动1分钟倒计时
### 7.8 retryCurrentQuestion()

只允许 `practice_part` 使用。它增加 `attemptNo`，保留历史轮次用于调试，但旧轮次以 `PRACTICE_RETRY` 完成，因此最终评分会排除。

### 7.9 skipCurrentQuestion()

只允许 `practice_part` 使用。当前轮次以 `PRACTICE_SKIP` 完成，然后进入下一题或完成当前 Part。

### 7.10 abandonAttempt()
放弃考试
abandonAttempt()
    ├── [调用] IeltsFlowStateService.set(ABANDONED)      // 状态=放弃
    └── [调用] IeltsAttemptService.abandonAttempt()       // 标记放弃，可能部分退款

```text
IeltsFlowStateService.set(ABANDONED)
→ IeltsAttemptService.abandonAttempt()
→ 取消计时器、评分 Future 和媒体连接
```

放弃后旧异步结果不能重新把 Attempt 改成 COMPLETE。

## 八、场景生成体系：IeltsQuestionBankService 是什么

### 8.1 它是什么

`IeltsQuestionBankService` 是确定性数据加载和校验服务，不调用大模型。

当前 demo 对应 `question-bank.mjs` 中的：

```text
loadQuestionBank()
validateQuestionBank()
normalizeManifest()
normalizeQuestion()
normalizeTiming()
```

### 8.2 loadAndValidate() 每一步是什么
| 内容              | 说明                                  |
| :-------------- | :---------------------------------- |
| `manifest`      | 题库元数据：版本号、Schema版本、总题数、更新时间         |
| `Part 1 题组`     | 按话题分组的题目集合，每组4-5道题                  |
| `Part 2/3 组合题库` | Part 2 题卡 + 对应的 Part 3 追问题，绑定在同一话题下 |

题库加载与校验
```text
第一步：加载 manifest
知道 Part 1、Part 2/3 文件路径、题库版本、Schema 和默认计时。

第二步：并行加载题库文件
减少本地启动等待时间。

第三步：标准化字段
把 question_id、raw_text 等数据转换成统一模型字段。

第四步：校验全局 ID 唯一
防止字幕或评分证据绑定到错误题目。

第五步：过滤 active 且 eligible 的内容
needsReview 可以保留警告，但不可用题目不能进入组卷池。

第六步：校验 Part 1
至少存在一个包含四道可用题目的题组。

第七步：校验 Part 2/Part 3 原子关系
cardId 必须等于 topicId，Part 3 questionId 必须属于同一 topicId。

第八步：返回标准化 IeltsQuestionBank
后续组卷服务不再处理原始 JSON 差异。
```


## 九、场景生成体系：IeltsPaperAssemblerService 是什么     试卷组装
| 方法           | 场景            |
| :----------- | :------------ |
| `generate()` | 首次创建，先加载题库再组装 |
| `assemble()` | 题库已加载，直接组装    |

### 9.1 它是什么

`IeltsPaperAssemblerService` 是试卷组装器。它从合格题库中选题，并生成不可变 `PaperSnapshot`。

当前 demo 对应 `paper-assembler.mjs` 中的 `assemblePaper()` 及其辅助方法。

### 9.2 为什么不能由考官模型临时出题

冻结试卷可以保证：

```text
考生看到的题目与评分输入完全一致
Part 2 与 Part 3 主题保持一致
题目顺序可重放
Prompt、题库和计时版本可审计
模型无法擅自改题、跳题或新增追问
```

### 9.3 generate()

`generate()` 是统一 `SceneGenerationService<R>` 接口要求的方法。

```text
IeltsQuestionBankService.loadAndValidate()
→ assemble()
→ 返回 IeltsPaperSnapshot
```

### 9.4 assemble()

具体规则为：

```text
1. 校验 mode
   只允许 full_mock 或 practice_part。

2. 校验 selectedPart
   practice_part 必须是 part1、part2 或 part3。

3. 校验 timingProfile
   只允许 real_exam 或 accelerated_demo。

4. 组装 Part 1
   从一个 Topic 中随机选择四至五道互不重复题目，并按来源顺序排列。

5. 组装 Part 2/Part 3
   二者使用同一个原子 Topic bundle，不能跨 Topic 拼接。

6. 避让历史题目
   优先排除最近完成考试用过的 ID；没有新候选时允许放宽并记录 historyRelaxed。

7. 写入元数据
   保存 bankVersion、schemaVersion、promptVersion、timingProfile 和 assemblyPolicy。

8. 深度冻结
   考试开始后任何层都不能修改题目文本或计时配置。
```

## 十、Prompt 体系：IeltsPromptService 是什么

### 10.1 它是什么

`IeltsPromptService` 是版本化 Prompt 的统一门面。

它包含三类完全不同的 Prompt：

```text
考官 Prompt
控制考试中模型怎么说话。

语言证据 Prompt
分析 rawTranscript 中的 FC、LR、GRA 证据。

最终裁判 Prompt
融合整场语言证据、发音证据和质量警告，输出严格 JSON。
```

当前 demo 对应：

```text
Java IeltsPromptCatalog.java
加载 examiner-system.txt、language-evidence.txt、judge.txt。

前端 examiner-prompt-catalog.mjs
保存开场、Part 过渡语、结束语和 askQuestion/sayExactly 指令。
```

### 10.2 buildPrompt()

```text
IeltsPromptCatalog.examinerSystem()
→ 读取 PaperSnapshot 冻结题目
→ 注入当前固定指令或题目
→ 返回 IeltsExaminerPrompt
```

它要求考官：

```text
只说英语
不教学、不纠错、不评分
不自行选择、改写、跳过或发明题目
说完固定内容后等待
不自行推进 Part 或结束回答
```

### 10.3 getExaminerPrompt()

它是供 `IeltsExamFlowService` 和 `IeltsSessionService` 使用的公开入口，内部复用 `buildPrompt()`。

### 10.4 getPromptVersion()

读取 Prompt 版本并写入 `PaperSnapshot` 和 `IeltsAttempt`。这样报告出现差异时，可以知道使用了哪一版评分规范。

### 10.5 buildLanguageEvidencePrompt()

输入包含：

```text
Part 1/2/3 原始字幕
冻结题目
回答时长
客观流利度指标
数据质量警告
```

明确排除：

```text
Introduction
纠正表达
推荐表达
非评分轮次
仅凭拼写推断发音
```

输出只包含 FC、LR、GRA 的 Band 建议、置信度和中文证据，不允许输出 Overall。

### 10.6 buildJudgePrompt()

它在第一阶段结果基础上加入讯飞发音证据和整场上下文。

输出必须是严格 JSON，包含：

```text
fluency_coherence
lexical_resource
grammatical_range_accuracy
pronunciation
task_achievement
positive_evidence
limiting_evidence
confidence
band_range
part_summaries
```

模型仍然禁止输出 `overall_band`。Overall 必须由本地确定性代码计算。

## 十一、评分体系：IeltsEvaluationService 是什么

### 11.1 它是什么

`IeltsEvaluationService` 是雅思评分能力的应用层门面，实现统一的 `SceneEvaluationService`。

它把底层多个类组合成一个稳定接口：

```text
IeltsTurnAssembler
IeltsAcousticFeatureService
PronunciationEvidenceProvider
IeltsTwoStageTextScorer
IeltsScoringOrchestrator
IeltsBandCalculator
IeltsRadarMapper
```

当前 Java demo 没有一个完全同名的 `IeltsEvaluationService` 文件，但这些能力已经存在。大树新增该名称，是为了避免 Controller、Session 和 WebSocket 直接依赖七八个底层类。

### 11.2 start()

```text
调用：IeltsTurnAssembler.open()
输入：attemptId、Part、questionId、冻结题目、turnType、scoringEligible
输出：turnId
```
start()
    ├── [调用] IeltsTurnAssembler.open()           // 开启新一轮话轮组装
    └── 创建评分轮次
        ├── Part 标识（当前是 Part 1/2/3）
        ├── 冻结题目（当前轮次对应的题目，不可变）
        └── scoringEligible = true/false           // 该轮次是否参与最终评分
创建的轮次记录：

```text
题目快照
打开时间
是否 Part 2 长回答
是否允许评分
后续音频、字幕和 VAD 片段
```

### 11.3 setAudio()
setAudio()
    └── [调用] IeltsTurnAssembler.appendPcm()      // 追加PCM音频片段

finishAudio()
    ├── [调用] IeltsTurnAssembler.complete()       // 显式完成轮次
    └── 特殊规则：VAD停顿不结束Part 2
```text
调用：IeltsTurnAssembler.appendPcm()
输入：PCM 二进制分片
输出：无
```

音频使用 16 kHz、16-bit、mono PCM，并保留 pre-roll 和 post-roll，减少首尾语音丢失。

### 11.4 finishAudio()

```text
调用：IeltsTurnAssembler.complete()
输入：turnId、结束时间、completionReason
输出：完成后的轮次状态
```

它记录 `USER_DONE`、`TIME_LIMIT`、`PRACTICE_RETRY` 或 `PRACTICE_SKIP` 等原因。

Part 2 必须等显式完成事件，VAD 停顿不能调用逻辑完成。

### 11.5 setTranscript()

```text
调用：IeltsTurnAssembler.transcript()
输入：ASR rawTranscript
输出：无
```

只保存原始转写，不能把润色文本覆盖原始证据。

### 11.6 getTurnResult()

```text
调用：IeltsClientEventPolicy.turnScored()
输出：TURN_CAPTURED
```

完整模考过程中不展示单题分数，是为了避免即时反馈影响后续回答。当前 MVP 的练习模式也统一在考试结束后返回报告。

### 11.7 getFinalReport()

```text
IeltsScoringOrchestrator.score()
→ 过滤轮次
→ 计算客观指标
→ 获取发音证据
→ 两阶段文本评分
→ 本地计算 Overall
→ 映射五维雷达图
→ 生成并发布 IeltsReport
```

## 十二、最终评分内部每个组件是什么

### 12.1 IeltsTurnAssembler

它是轮次组装器，不是评分模型。

它把以下异步到达的数据合并：

```text
PCM 音频
speech_started / speech_stopped
rawTranscript
questionId 和冻结题目
显式完成原因
```

最终得到可评分的 `IeltsTurn`。

### 12.2 IeltsAcousticFeatureService

它是本地确定性指标计算器，不调用外部 AI。

计算内容包括：

```text
answerDuration
speechDuration
silenceRatio
wordCount
speechRate
pauseCount
longPauseCount
fillerCount
responseLatency
Part 2 longestSpeechChunk
```

### 12.3 PronunciationEvidenceProvider

它是发音证据提供者接口。

当前实现 `XfyunPronunciationEvidenceProvider` 调用讯飞 ISE。当前账号/接口主要暴露 `read_sentence` 模式，所以结果必须标记为低置信辅助证据，不能直接当成 IELTS 发音 Band。

### 12.4 IeltsTwoStageTextScorer

它是两阶段文本评分接口：

```text
languageEvidence()
先提取语言证据，降低一次 Prompt 同时完成所有任务的不稳定性。

holisticJudge()
再结合语言证据、发音证据和完整考试上下文完成整体判断。
```

当前实现 `QwenIeltsTextScorer` 调用千问评分能力。

### 12.5 IeltsScoringOrchestrator

它是评分编排器，不亲自完成所有算法。

它负责：

```text
防止重复开始评分
等待 stream.end
并行调用发音服务
调用两阶段文本评分
处理超时和部分失败
验证模型返回值
计算最终状态
组装报告
发布报告
```

### 12.6 IeltsBandCalculator

它是官方四项 Overall 的确定性计算器。

```text
输入：FC、LR、GRA、P 四个 Band
规则：四项平均后按 0.5 Band 取整
限制：每项必须为 0–9 且以 0.5 为步长
缺失：任何一项缺失则 Overall=null，报告为 PARTIAL
```

TA 不会进入该计算器。

### 12.7 IeltsRadarMapper

它负责把后端报告转换成固定五轴数据：

```text
FC  流利度与连贯性
LR  词汇资源
GRA 语法多样性与准确性
P   发音
TA  任务完成度/互动回应
```

四个 Band 通过 `band / 9 × 100` 映射到雷达图，TA 直接使用 0–100。

## 十三、五维评分规则到底是什么

### 13.1 四个官方维度

```text
FC：Fluency and Coherence，流利度与连贯性
LR：Lexical Resource，词汇资源
GRA：Grammatical Range and Accuracy，语法多样性与准确性
P：Pronunciation，发音
```

这四项使用 0–9 Band，并参与 Overall。

### 13.2 第五维 TA

```text
TA：Task Achievement / Interaction Response
中文：任务完成度/互动回应
范围：0–100
关注：相关性、覆盖程度、观点展开和对追问的回应
性质：UniSpeaking 训练诊断项
```

TA 不是 IELTS Speaking 官方评分项，因此只能展示在五维训练雷达图中，不能改变 Overall。

### 13.3 为什么缺失值不能变成 0

`null` 表示“证据不足或服务不可用”，`0` 表示“已经评分且表现为零”。二者业务含义完全不同。

因此：

```text
发音服务失败
→ P=null
→ Overall=null
→ 报告状态 PARTIAL

绝不能变成：
P=0
→ Overall 被错误拉低
```

## 十四、从创建考试到五维报告的完整步骤

### 第 1 步：用户选择模式

前端选择 `full_mock` 或 `practice_part`。练习模式还需要选择具体 Part。

### 第 2 步：完成 Preflight

在考试开始前确定字幕、录音和加速演示设置。考试开始后这些初始策略不能任意修改。

### 第 3 步：加载题库

`IeltsQuestionBankService.loadAndValidate()` 加载并标准化题库。

### 第 4 步：组装 PaperSnapshot

`IeltsPaperAssemblerService.assemble()` 根据模式、历史题目、计时和 Prompt 版本生成冻结试卷。

### 第 5 步：创建 Attempt

`IeltsAttemptController.createAttempt()` 调用 `IeltsAttemptService.createAttempt()`，返回 `attemptId` 和评分 WebSocket 地址。

### 第 6 步：初始化考试状态

`IeltsFlowStateService.set(READY)` 创建状态机初始状态。

### 第 7 步：准备考官 Prompt

`IeltsPromptService.getExaminerPrompt()` 返回只允许朗读固定内容的考官约束。

### 第 8 步：建立 Realtime 连接

`IeltsSessionService.start()` 完成媒体授权、SDP 交换、DataChannel 建立和 Session 配置。

### 第 9 步：打开评分流

评分 WebSocket 绑定 `attemptId`，二进制传 PCM，文本传轮次控制事件。

### 第 10 步：进入开场和 Introduction

完整模考从 READY 进入 OPENING，再进入 INTRODUCTION。Introduction 会保存但不评分。

### 第 11 步：进行 Part 1

状态机逐题读取冻结问题；每题创建一个 `IeltsTurn`，保存音频、原始字幕和完成原因。

### 第 12 步：进行 Part 2 准备

进入 `PART2_PREPARING`，启动一分钟计时，仅此阶段允许编辑笔记。

### 第 13 步：进行 Part 2 长回答

创建 `PART2_LONG_TURN`。VAD 停顿只记录 speech chunk，只有显式完成或时间上限才结束轮次。

### 第 14 步：进行 Part 3

使用与 Part 2 同 Topic 的追问题，并同时管理单题时间和 Part 3 整体软/硬时间上限。

### 第 15 步：封闭评分流

考试结束后等待 post-roll，再发送 `stream.end`，确保回答尾部音频完整。

### 第 16 步：请求 Finalize

`IeltsAttemptController.finalizeAttempt()` 把状态改为 FINALIZING，并请求异步评分。

### 第 17 步：等待 streamFinalized

`IeltsAttemptRegistry.startScoring()` 先等待评分流完成，避免模型读取到不完整音频。

### 第 18 步：过滤评分轮次

只保留 Part 1/2/3、已完成、`scoringEligible=true` 且不是 RETRY/SKIP 的轮次。

### 第 19 步：计算客观流利度指标

`IeltsAcousticFeatureService.calculate()` 为每轮生成时长、语速、停顿和静音等指标。

### 第 20 步：获取讯飞发音证据

`PronunciationEvidenceProvider.evaluate()` 并行处理各轮音频；单轮失败转为数据质量警告。

### 第 21 步：提取语言证据

`IeltsTwoStageTextScorer.languageEvidence()` 使用 rawTranscript 生成 FC、LR、GRA 证据。

### 第 22 步：整体裁判

`IeltsTwoStageTextScorer.holisticJudge()` 融合完整上下文和发音证据，返回四项 Band 建议与 TA。

### 第 23 步：本地计算 Overall

`IeltsBandCalculator.calculate()` 只平均 FC、LR、GRA、P；TA 不参与。

### 第 24 步：生成五维雷达数据

`IeltsRadarMapper.map()` 输出 FC、LR、GRA、P、TA 五个固定轴。

### 第 25 步：发布报告

`IeltsScoringOrchestrator` 将状态设为 COMPLETE、PARTIAL 或 UNSCORABLE，并把报告发布到 Attempt。

### 第 26 步：前端读取报告

前端轮询 `getReport()`，然后展示 Overall、Band 区间、四项官方卡片、TA 证据、Part 总结、警告和免责声明。

### 第 27 步：关闭与清理

关闭 Realtime、评分 WebSocket、媒体轨道和计时器，结算额度，并防止旧异步回调覆盖新考试。

## 十五、大树抽象与当前 demo 之间的落地关系

### 已经存在的 Java 实现

```text
IeltsAttemptController
IeltsAttempt
IeltsAttemptRegistry
IeltsScoringStreamHandler
IeltsTurnAssembler
IeltsAcousticFeatureService
IeltsPromptCatalog
IeltsScoringOrchestrator
IeltsTwoStageTextScorer
QwenIeltsTextScorer
PronunciationEvidenceProvider
XfyunPronunciationEvidenceProvider
IeltsBandCalculator
IeltsRadarMapper
IeltsReport 及相关模型
```

### 当前主要位于前端、后续可下沉或封装的能力

```text
题库加载与校验
PaperSnapshot 组装
考试确定性状态机
各 Part 计时与流程编排
固定考官指令目录
Realtime 会话运行时协调
```

### 大树新增但当前需要形成正式 Java 门面的抽象

```text
IeltsAttemptService
IeltsSessionWebSocketHandler
IeltsSessionService
IeltsExamFlowService
IeltsFlowStateService
IeltsExamTimerService
IeltsQuestionBankService
IeltsPaperAssemblerService
IeltsPromptService
IeltsEvaluationService
```

这些名称不是重复开发底层能力，而是将现有 demo 中分散的实现组合成清晰、稳定、可测试的 Java 业务边界。

## 十六、最终一句话理解每个核心类

```text
IeltsAttemptController
对前端暴露创建、结束、查询、放弃和删除考试的 HTTP API。

IeltsSessionWebSocketHandler
把实时控制事件和音频事件适配到雅思会话与评分服务。

IeltsSessionService
负责一场 Realtime 考试会话从建立到关闭。

IeltsExamFlowService
负责考试现在在哪个阶段，以及下一步是否合法。

IeltsQuestionBankService
负责保证进入组卷池的题库数据结构正确。

IeltsPaperAssemblerService
负责生成本次考试唯一且不可修改的试卷快照。

IeltsPromptService
负责考官怎么说，以及评分模型应该怎样读取证据。

IeltsEvaluationService
负责把音频、字幕和题目变成评分证据，并返回最终报告。

IeltsScoringOrchestrator
负责协调所有评分组件，不让任何单一模型直接控制最终 Overall。

IeltsBandCalculator
负责以确定性规则计算 IELTS 官方 Overall。

IeltsRadarMapper
负责把四项官方维度和训练第五维转换成前端五维图数据。
```
